# FISHFLOW

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
apps/admin-web/: package-lock.json  package.json  tsconfig.json
apps/api/: main.py  router.py
apps/worker/: celery_app.py  main.py  tasks_delivery.py  tasks_message.py  tasks_order.py  tasks_sync.py
apps/xianyu_bridge_mock/: main.py
deploy/: docker-compose.yml
deploy/docker/: admin-web.Dockerfile  api.Dockerfile  worker.Dockerfile
deploy/sql/: 001_initial_schema.sql  002_seed_demo_data.sql
docs/: api-closed-loop.md  project-structure.md  xianyu-bridge-api.md
domain/account/: models.py  repository.py  schemas.py  service.py
domain/admin_action/: models.py  repository.py
domain/ai_copy/: models.py  repository.py  schemas.py  service.py
domain/ai_reply/: models.py  repository.py  schemas.py  service.py
domain/analytics/: models.py  repository.py  schemas.py
domain/common/: enums.py
domain/conversation/: models.py  repository.py  schemas.py  service.py
domain/delivery/: enums.py  models.py  repository.py  schemas.py  service.py  state_machine.py
domain/inventory/: models.py  repository.py  schemas.py  service.py
domain/knowledge/: models.py  repository.py  schemas.py  service.py
domain/message/: enums.py  models.py  repository.py  schemas.py  service.py
domain/notification/: models.py  repository.py  schemas.py  service.py
domain/order/: enums.py  models.py  repository.py  (+3 more)
scripts/: seed_demo_data.py
tests/: conftest.py  test_delivery_flow.py  test_message_flow.py
(+106 files in other folders)
