[project]
name = "fishflow"
version = "0.1.0"
description = "FishFlow MVP backend scaffold"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "celery>=5.4.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "pydantic>=2.9.0",
  "redis>=5.2.0",
  "sqlalchemy>=2.0.36",
  "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.7.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
  "apps*",
  "domain*",
  "services*",
  "interfaces*",
  "infrastructure*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
